[gd_scene load_steps=6 format=3 uid="uid://cf3dgj0hegtqq"]

[ext_resource type="Script" path="res://src/ui/buttons/autocast_button.gd" id="1_eojut"]
[ext_resource type="Texture2D" uid="uid://0npkf7jas08m" path="res://resources/icons/gloves/heal.tres" id="2_o57jp"]
[ext_resource type="Script" path="res://src/ui/buttons/time_indicator.gd" id="3_d6wsi"]
[ext_resource type="Theme" uid="uid://bql5sxaowafw3" path="res://resources/theme/wc3_theme.tres" id="3_rtugu"]
[ext_resource type="PackedScene" uid="uid://bovo5mbv22jly" path="res://src/ui/buttons/auto_mode_indicator.tscn" id="5_xah78"]

[node name="AutocastButton" type="Button" node_paths=PackedStringArray("_time_indicator", "_auto_mode_indicator", "_indicator_container")]
custom_minimum_size = Vector2(85, 85)
focus_mode = 0
theme = ExtResource("3_rtugu")
theme_type_variation = &"UnitButton"
icon = ExtResource("2_o57jp")
expand_icon = true
script = ExtResource("1_eojut")
_time_indicator = NodePath("IndicatorContainer/TimeIndicator")
_auto_mode_indicator = NodePath("IndicatorContainer/MarginContainer/AutoModeIndicator")
_indicator_container = NodePath("IndicatorContainer")

[node name="IndicatorContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="TimeIndicator" type="Control" parent="IndicatorContainer"]
layout_mode = 2
mouse_filter = 2
theme = ExtResource("3_rtugu")
script = ExtResource("3_d6wsi")

[node name="MarginContainer" type="MarginContainer" parent="IndicatorContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="AutoModeIndicator" parent="IndicatorContainer/MarginContainer" instance=ExtResource("5_xah78")]
layout_mode = 2

[connection signal="pressed" from="." to="." method="_on_pressed"]
